--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,9 @@
 .App-header {
+  background-attachment: fixed;
   background-image: url(./splash.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
